--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" /> 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" /> 
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Day Planner</title>
 </head>
 
 <body>
     <header class="jumbotron bg-primary"> 
-        <h1 class="font-italic font-weight-bold text-white display-3">Work Day Scheduler</h1>
-        <p class="text-white font-weight-bold lead">A simple calendar application for scheduling your work day</p>
+        <h1 class="font-italic font-weight-bold text-white display-3">Day Planner</h1>
+        <p class="text-white font-weight-bold lead">To help orginize your day</p>
         <p id="currentDay" class="text-white font-weight-bold lead"></p>
     </header>
     <div class="container">
